Bug 390717 - No context menu entry for 'Snap Component Size to Grid'
Summary: No context menu entry for 'Snap Component Size to Grid'
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-19 07:32 UTC by Ralf Habacker
Modified: 2018-02-19 07:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.80 (KDE Applications 18.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-19 07:32:05 UTC
How to reproduce ?
1. start umbrello
2. double click on a class diagram background, there is an option 'Snap Component Size to Grid'
3. close dialog
4. press right mouse button

What happpens ?
There is no context menu entry for 'Snap Component Size to Grid'

What is expected ?
There should be a context menu entry for 'Snap Component Size to Grid'
Comment 1 Ralf Habacker 2018-02-19 07:36:00 UTC
Git commit c8c712eadba6c698f135014507b68c2b5d6f1246 by Ralf Habacker.
Committed on 19/02/2018 at 07:35.
Pushed by habacker into branch 'master'.

Add diagram context menu entry 'Snap Component Size to Grid'
FIXED-IN:2.24.80 (KDE Applications 18.03.80)

M  +2    -0    umbrello/listpopupmenu.cpp
M  +1    -0    umbrello/listpopupmenu.h
M  +5    -0    umbrello/umlscene.cpp

https://commits.kde.org/umbrello/c8c712eadba6c698f135014507b68c2b5d6f1246