Add diagram context menu entry 'Snap Component Size to Grid'

BUG:390717
FIXED-IN:2.24.80 (KDE Applications 18.03.80)